...
      mainAxisAlignment: MainAxisAlignment.spaceEvenly,
      children: [
        Row(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: [
            Avatar(
              name: isProcessing ? "Processing" : name,
              shape: AvatarShape.circle(30),
            ),
            const SizedBox(
              width: 10,
              height: 10,
            ),
...
